abstract class ICreateCatalogEventController {
  void onNewCatalogPressed();
  void onNewCatalogSavePressed();
  void onCancelPressed();
}
