abstract class ICreateCatalogPresenter {
  void showCreateCatalogForm(int parentId);
  void closeCreateCatalogForm();
}
